--- a/klarnaconnect.html
+++ b/klarnaconnect.html
@@ -20,11 +20,12 @@
             var psu = {
                 "language": "en",
                 "psu": {
-                    "user_agent": navigator.userAgent,
-                    "ip_address": "18.159.89.0"
+                    "user_agent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/75.0.3770.100 Safari/537.36",
+                    "ip_address": "123.123.123.123"
                 }
             }
             xhr.send(psu); 
+            //navigator.userAgent
         }
 
         getData();
