--- a/klarnaconnect.html
+++ b/klarnaconnect.html
@@ -22,8 +22,8 @@
             var psu = {
                 "language": "en",
                 "psu": {
-                    "user_agent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/75.0.3770.100 Safari/537.36",
-                    "ip_address": "123.123.123.123"
+                    "user_agent": navigator.userAgent,
+                    "ip_address": "18.159.89.0"
                 }
             }
             xhr.send(psu); 
