--- a/klarnaconnect.html
+++ b/klarnaconnect.html
@@ -26,7 +26,7 @@
                     "ip_address": "18.159.89.0"
                 }
             }
-            xhr.send(); 
+            xhr.send(psu); 
             //navigator.userAgent
         }
 
