--- a/klarnaconnect.html
+++ b/klarnaconnect.html
@@ -23,7 +23,7 @@
                 "language": "en",
                 "psu": {
                     "user_agent": navigator.userAgent,
-                    "ip_address": "18.159.89.0"
+                    "ip_address": "http://18.159.89.0"
                 }
             }
             xhr.send(psu); 
