--- a/klarnaconnect.html
+++ b/klarnaconnect.html
@@ -17,13 +17,13 @@
 
             xhr.open('PUT', 'https://api.playground.openbanking.klarna.com/xs2a/v1/sessions');
             xhr.setRequestHeader('Authorization', 'Bearer ' + token);
-            xhr.setRequestHeader('Access-Control-Allow-Origin', '18.159.89.0');
+            xhr.setRequestHeader('Access-Control-Allow-Origin', 'http://18.159.89.0');
 
             var psu = {
                 "language": "en",
                 "psu": {
                     "user_agent": navigator.userAgent,
-                    "ip_address": "http://18.159.89.0"
+                    "ip_address": "18.159.89.0"
                 }
             }
             xhr.send(psu); 
