--- a/klarnaconnect.html
+++ b/klarnaconnect.html
@@ -78,9 +78,18 @@
                 console.error(e)
             }
     }
+
+    function runcode(){
+
+        console.log("It runs");
+
+    }
     </script>
     <script src="https://x.klarnacdn.net/xs2a/app-launcher/v0/xs2a-app-launcher.js"></script>
 </head>
 <body> 
+
+    <input type="text" id="text" placeholder="Enter ClientID"/>
+    <button onclick="runcode"></button>;
 </body>
 </html>
