--- a/klarnaconnect.html
+++ b/klarnaconnect.html
@@ -30,7 +30,7 @@
             //navigator.userAgent
         }
 
-        //getData();*/
+        //getData();
 
     
 
@@ -78,7 +78,7 @@
                 console.error(e)
             }
     }
-
+*/
     function runcode(){
 
         console.log("It runs");
