--- a/klarnaconnect.html
+++ b/klarnaconnect.html
@@ -83,7 +83,7 @@
 
         
 
-        document.getElementById("text").addEventListener("click", function(){
+        document.getElementById("submit").addEventListener("click", function(){
             console.log("It runs");
         })
 
@@ -94,6 +94,6 @@
 <body> 
 
     <input id="text" placeholder="Enter ClientID"/>
-    <button onclick="runcode"></button>;
+    <button id="submit" name="send"></button>;
 </body>
 </html>
