--- a/klarnaconnect.html
+++ b/klarnaconnect.html
@@ -94,6 +94,6 @@
 <body> 
 
     <input id="text" placeholder="Enter ClientID"/>
-    <button id="submit" name="send"></button>;
+    <button id="submit" name="send">Send</button>;
 </body>
 </html>
