--- a/klarnaconnect.html
+++ b/klarnaconnect.html
@@ -83,4 +83,11 @@
 </head>
 <body> 
 </body>
+
+    <script>
+        function init(val){
+    // Do whatever you want with your parameter val
+        console.log(val);
+        }
+    </script>
 </html>
