--- a/klarnaconnect.html
+++ b/klarnaconnect.html
@@ -87,7 +87,7 @@
     <script>
         function init(val){
     // Do whatever you want with your parameter val
-        console.log(val);
+        alert(val);
         }
     </script>
 </html>
