--- a/klarnaconnect.html
+++ b/klarnaconnect.html
@@ -82,6 +82,7 @@
     <script src="https://x.klarnacdn.net/xs2a/app-launcher/v0/xs2a-app-launcher.js"></script>
 </head>
 <body> 
+    <a id="text">Testing</a>
 </body>
 
     <script>
