--- a/klarnaconnect.html
+++ b/klarnaconnect.html
@@ -86,9 +86,11 @@
 </body>
 
     <script>
+    document.getElementById("text").value = "Changed";
+
         function init(val){
     // Do whatever you want with your parameter val
-        alert(val);
+    document.getElementById("text").value = val
         }
     </script>
 </html>
