--- a/klarnaconnect.html
+++ b/klarnaconnect.html
@@ -25,7 +25,7 @@
                     "user_agent": navigator.userAgent,
                     "ip_address": "18.159.89.0"
                 }
-                
+
             }
             xhr.send(psu); 
             //navigator.userAgent
@@ -96,5 +96,6 @@
         </script>
 </body>
 
+<!--  ssh -i "awsEC2_frankfurt.pem" ec2-user@ec2-18-159-89-0.eu-central-1.compute.amazonaws.com -->
     
 </html>
