--- a/klarnaconnect.html
+++ b/klarnaconnect.html
@@ -65,8 +65,14 @@
             },
         })
 
+        //var lifecyc;
         function klarnaLifecycleCallback(state){
-            return state;
+            //state = 
+            androidResponse()
+        }
+
+        function androidResponse() {
+            window.cpjs.sendToAndroid("I am being sent to Android.");
         }
 
         
