--- a/klarnaconnect.html
+++ b/klarnaconnect.html
@@ -21,7 +21,7 @@
                 console.log('KlarnaOnError', error)
             },
             onFinished: () => {
-                console.log('KlarnaOnFinished')
+                //console.log('KlarnaOnFinished')
             },
             onClose: () => {
                 console.log('KlarnaOnClose')
@@ -42,7 +42,7 @@
                             {
                                 onFinished: () => {
                                     // Read the flow from the server to retrieve the account list.
-                                    console.log('onFinished: read the flow from the server to retrieve the account list.')
+                                    console.log('KlarnaOnFinished')
                                 },
                                 onError: error => {
                                     console.error('onError: something bad happened during the flow.', error)
