--- a/klarnaconnect.html
+++ b/klarnaconnect.html
@@ -32,6 +32,7 @@
     <script src="https://x.klarnacdn.net/xs2a/app-launcher/v0/xs2a-app-launcher.js"></script>
 </head>
 <body> 
+    <a href="">testing</a>
     <script>
             function startAuthenticationApp(val){
                 // Do whatever you want with your parameter val
